--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         }
     },
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "guzzlehttp/psr7": "^1.4",
+        "http-interop/response-sender": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
