--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,15 @@
     "autoload": {
         "psr-4": {
             "Core\\": "src/Core",
+            "Bundles\\": "src/Bundles",
             "Tests\\": "tests"
         }
     },
     "require": {
         "php": "^7.1",
         "guzzlehttp/psr7": "^1.4",
-        "http-interop/response-sender": "^1.0"
+        "http-interop/response-sender": "^1.0",
+        "zendframework/zend-expressive-fastroute": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
