--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1",
         "guzzlehttp/psr7": "^1.4",
         "http-interop/response-sender": "^1.0",
-        "zendframework/zend-expressive-fastroute": "^2.1"
+        "zendframework/zend-expressive-fastroute": "^2.1",
+        "twig/twig": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
