--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "guzzlehttp/psr7": "^1.4",
         "http-interop/response-sender": "^1.0",
         "zendframework/zend-expressive-fastroute": "^2.1",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "php-di/php-di": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
