--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
-        "squizlabs/php_codesniffer": "^3.1"
+        "squizlabs/php_codesniffer": "^3.1",
+        "robmorgan/phinx": "^0.9.1",
+        "fzaninotto/faker": "^1.7"
     }
 }
